--- a/TMDT/Views/Shared/_Layout.cshtml
+++ b/TMDT/Views/Shared/_Layout.cshtml
@@ -29,14 +29,41 @@
             </div>
         </div>
     </div>
+
     <div class="container body-content">
         @RenderBody()
+        <!-- Load Facebook SDK for JavaScript -->
+        <div id="fb-root"></div>
+        <script>
+            window.fbAsyncInit = function () {
+                FB.init({
+                    xfbml: true,
+                    version: 'v9.0'
+                });
+            };
+
+            (function (d, s, id) {
+                var js, fjs = d.getElementsByTagName(s)[0];
+                if (d.getElementById(id)) return;
+                js = d.createElement(s); js.id = id;
+                js.src = 'https://connect.facebook.net/vi_VN/sdk/xfbml.customerchat.js';
+                fjs.parentNode.insertBefore(js, fjs);
+            }(document, 'script', 'facebook-jssdk'));</script>
+
+        <!-- Your Chat Plugin code -->
+        <div class="fb-customerchat"
+             attribution=setup_tool
+             page_id="105714171386163"
+             theme_color="#20cef5"
+             logged_in_greeting="Chào bạn! Chúng tôi có thể giúp gì cho bạn!!!"
+             logged_out_greeting="Chào bạn! Chúng tôi có thể giúp gì cho bạn!!!">
+        </div>
         <hr />
         <footer>
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
     </div>
-
+   
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
