--- a/TMDT/Views/HttpErrors/NotFound.cshtml
+++ b/TMDT/Views/HttpErrors/NotFound.cshtml
@@ -9,7 +9,7 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <link href="~/Content/Page404/URL404.css" rel="stylesheet" />
-    <title>NotFound</title>
+    <title>404</title>
 </head>
 <body>
     <div class="main">
