change role for user

--- a/TMDT/Views/Account/Register.cshtml
+++ b/TMDT/Views/Account/Register.cshtml
@@ -5,36 +5,73 @@
 
 <h2>@ViewBag.Title.</h2>
 
-@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <h4>Create a new account.</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+<div class="form_register">
+    @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal register_user", role = "form", enctype = "multipart/form-data" }))
+    {
+        @Html.AntiForgeryToken()
+        @Html.ValidationSummary("", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.LabelFor(model => model.Image, htmlAttributes: new { @class = "control-label col-md-2", @placeholder = "Hình ảnh" })
+            <div class="">
+                <img src="~/Content/Images/thumbnail.png" style="height:200px ;width:200px;" id="prev" />
+                <input type="file" name="ImageUpload" onchange="ShowImgPrev(this,document.getElementById('prev'))" />
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+        <div class="form-group">
+
+            <div class="">
+                @Html.TextBoxFor(m => m.Email, new { @class = "form-control", @placeholder = "Email" })
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+
+        <div class="form-group">
+
+            <div class=" ">
+                @Html.DropDownListFor(model => model.Sex, new List<SelectListItem>
+                 { new SelectListItem{Text="Nam", Value="Nam"},
+                   new SelectListItem{Text="Nữ", Value="Nữ",  Selected = true,},
+                   })
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Register" />
+        <div class="form-group">
+
+            <div class=" ">
+                @Html.TextBoxFor(m => m.UserDateOfBirth, new { @class = "form-control", @type = "date", @placeholder = "Email" })
+            </div>
         </div>
-    </div>
-}
+        <div class="form-group">
+
+            <div class=" ">
+                @Html.TextBoxFor(m => m.Address, new { @class = "form-control", @placeholder = "Địa chỉ" })
+            </div>
+        </div>
+        <div class="form-group">
+
+            <div class=" ">
+                @Html.TextBoxFor(m => m.PhoneNumber, new { @class = "form-control", @placeholder = "Số điện thoại" })
+            </div>
+        </div>
+        <div class="form-group">
+
+            <div class=" ">
+                @Html.PasswordFor(m => m.Password, new { @class = "form-control", @placeholder = "Mật khẩu" })
+            </div>
+        </div>
+        <div class="form-group">
+
+            <div class=" ">
+                @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", @placeholder = "Xác nhận mật khẩu" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 register_user_btn  ">
+                <input type="submit" class="btn btn-info " value="Đăng ký" />
+            </div>
+        </div>
+    }
+</div>
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
