--- a/TMDT/Views/ManageRole/Index.cshtml
+++ b/TMDT/Views/ManageRole/Index.cshtml
@@ -1,25 +1,79 @@
-﻿@model TMDT.Models.GroupedUserViewModel
-<div class="row">
-    <h4>Users</h4>
-    @foreach (var user in Model.Users)
-    {
-        <p>
-            <strong>
-                @user.Username <br />
-                @user.Email<br />
-                @user.RoleName
-            </strong>
-        </p>
-    }
-    <h4>Advisers</h4>
-    @foreach (var usera in Model.Admins)
-    {
-        <p>
-            <strong>
-                @usera.Username <br />
-                @usera.Email<br />
-                @usera.RoleName
-            </strong>
-        </p>
-    }
+﻿@model IEnumerable<TMDT.Models.UserInRoleViewModel>
+
+@{
+    ViewBag.Title = "Users With Roles";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
+<div class="panel panel-primary">
+    <div class="panel-heading">
+        <h3 class="box-title">
+            <b>Users with Roles</b>
+        </h3>
+    </div>
+    <!-- /.box-header -->
+    <div class="panel-body">
+        <table class="table table-hover table-bordered table-condensed" id="UsersWithRoles">
+            <thead>
+                <tr>
+                    <td><b>Username</b></td>
+                    <td><b>Email</b></td>
+                    <td><b>Roles</b></td>
+                </tr>
+            </thead>
+            @foreach (var user in Model)
+            {
+        <tr>
+
+            <td>@user.Username</td>
+            <td>@user.Email</td>
+           
+            <td>
+                @user.Role
+                <select  name="test">
+                    @foreach (var item in ViewBag.Roles)
+                    {
+                        <option value="@item.Id">@item.Name</option>
+                    }
+                </select>
+            </td>
+            @if (User.Identity.Name == @user.Username)
+            {
+                <td>
+                    user is Authorize
+                </td>
+            }
+            else
+            {
+                <td>
+                    @Html.ActionLink("Edit Role", "Edit", new { userId = user.UserId, roleName = user.Role })
+                </td>
+            }
+
+        </tr>
+
+            }
+        </table>
+    </div>
+
+    <div class="panel-footer">
+        <p class="box-title"><b>Total Users till @String.Format("{0 : dddd, MMMM d, yyyy}", DateTime.Now)  : </b><span class="label label-primary">@Model.Count()</span></p>
+    </div>
 </div>
+
+
+@section scripts{
+    <script>
+
+        $(function () {
+            $('#UsersWithRoles').DataTable({
+                "paging": true,
+                "lengthChange": true,
+                "searching": true,
+                "ordering": true,
+                "info": true,
+                "autoWidth": true
+            });
+        });
+    </script>
+}  
