add_login user_view page manage

--- a/TMDT/Views/Authors/Details.cshtml
+++ b/TMDT/Views/Authors/Details.cshtml
@@ -2,14 +2,12 @@
 
 @{
     ViewBag.Title = "Details";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h2>Details</h2>
+
 
 <div>
-    <h4>Author</h4>
-    <hr />
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.AuthorName)
