--- a/TMDT/Views/Publishers/Index.cshtml
+++ b/TMDT/Views/Publishers/Index.cshtml
@@ -2,39 +2,39 @@
 
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h2>Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.PublisherName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.PublisherEmail)
-        </th>
-        <th></th>
-    </tr>
+    <button class="btn btn-success btn-sm">
+        @Html.ActionLink("Create New", "Create")
+        </button>
+        <table class="table">
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.PublisherName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.PublisherEmail)
+                </th>
+                <th></th>
+            </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.PublisherName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.PublisherEmail)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.PublisherID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.PublisherID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.PublisherID })
-        </td>
-    </tr>
-}
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.PublisherName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.PublisherEmail)
+                    </td>
+                    <td>
+                        @Html.ActionLink("Edit", "Edit", new { id = item.PublisherID }) |
+                        @Html.ActionLink("Details", "Details", new { id = item.PublisherID }) |
+                        @Html.ActionLink("Delete", "Delete", new { id = item.PublisherID })
+                    </td>
+                </tr>
+            }
 
-</table>
+        </table>
