--- a/TMDT/Views/Account/Login.cshtml
+++ b/TMDT/Views/Account/Login.cshtml
@@ -1,61 +1,49 @@
 ﻿@using TMDT.Models
 @model LoginViewModel
-@{
-    ViewBag.Title = "Log in";
-}
+@{ ViewBag.Title = "Log in"; }
 
-<h2>@ViewBag.Title.</h2>
-<div class="row">
+
+<div class="row login_user">
     <div class="col-md-8">
         <section id="loginForm">
-            @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+            @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal form_login", role = "form" }))
             {
-                @Html.AntiForgeryToken()
-                <h4>Use a local account to log in.</h4>
-                <hr />
+@Html.AntiForgeryToken()
+
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                <div class="form-group">
-                    @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
-                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                <div class="form-group">
-                    @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
-                        @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <div class="checkbox">
-                            @Html.CheckBoxFor(m => m.RememberMe)
-                            @Html.LabelFor(m => m.RememberMe)
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Log in" class="btn btn-default" />
-                    </div>
-                </div>
-                <p>
-                    @Html.ActionLink("Register as a new user", "Register")
-                </p>
-                @* Enable this once you have account confirmation enabled for password reset functionality
-                    <p>
-                        @Html.ActionLink("Forgot your password?", "ForgotPassword")
-                    </p>*@
-            }
+                                <div class="form-group">
+
+                                    <div class="">
+                                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control input_login", @placeholder = "Email" })
+                                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
+                                                <div class="form-group">
+
+                                                    <div class="">
+                                                        @Html.PasswordFor(m => m.Password, new { @class = "form-control input_login", @placeholder = "Mật khẩu" })
+                                                        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+                                                    </div>
+                                                </div>
+                                                                <div class="form-group">
+                                                                    <div class="c">
+                                                                        <div class="checkbox">
+                                                                            @Html.CheckBoxFor(m => m.RememberMe, new { @class = "check_box" })
+                                                                            @Html.LabelFor(m => m.RememberMe)
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+                                                                                <div class="form-group">
+                                                                                    <div class="">
+                                                                                        <input type="submit" value="Log in" class="btn btn-success btn_login" />
+                                                                                    </div>
+                                                                                </div>
+                                                                                                <div class="new_acc">
+                                                                                                    @Html.ActionLink("Đăng ký tài khoản mới..!", "Register")
+                                                                                                </div>            }
         </section>
     </div>
-    <div class="col-md-4">
-        <section id="socialLoginForm">
-            @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
-        </section>
-    </div>
+
 </div>
 
 @section Scripts {
