--- a/TMDT/Views/Account/Register.cshtml
+++ b/TMDT/Views/Account/Register.cshtml
@@ -3,8 +3,6 @@
     ViewBag.Title = "Register";
 }
 
-<h2>@ViewBag.Title.</h2>
-
 <div class="form_register">
     @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal register_user", role = "form", enctype = "multipart/form-data" }))
     {
@@ -28,9 +26,10 @@
 
             <div class=" ">
                 @Html.DropDownListFor(model => model.Sex, new List<SelectListItem>
-                 { new SelectListItem{Text="Nam", Value="Nam"},
-                   new SelectListItem{Text="Nữ", Value="Nữ",  Selected = true,},
-                   })
+                 { new SelectListItem{Text="Khác", Value="Khác", Selected = true,},
+                 new SelectListItem{Text="Nam", Value="Nam"},
+                   new SelectListItem{Text="Nữ", Value="Nữ" },
+                   }, new { @class = "form-control"})
             </div>
         </div>
         <div class="form-group">
