--- a/TMDT/Views/Books/Delete.cshtml
+++ b/TMDT/Views/Books/Delete.cshtml
@@ -2,16 +2,16 @@
 
 @{
     ViewBag.Title = "Delete";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+
+<h3>Bạn có chắc là xoá quyển sách này?</h3>
 <div>
-    <h4>Book</h4>
+   
     <hr />
-    <dl class="dl-horizontal">
+    <dl class="dl-horizontal  ">
         <dt>
             @Html.DisplayNameFor(model => model.Author.AuthorName)
         </dt>
@@ -90,7 +90,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" value="Delete" class="btn btn-danger" /> |
             @Html.ActionLink("Back to List", "Index")
         </div>
     }
