--- a/TMDT/Views/Categories/Details.cshtml
+++ b/TMDT/Views/Categories/Details.cshtml
@@ -2,14 +2,11 @@
 
 @{
     ViewBag.Title = "Details";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 
-<h2>Details</h2>
 
 <div>
-    <h4>Category</h4>
-    <hr />
+    
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.CateName)
