--- a/TMDT/Views/Categories/Edit.cshtml
+++ b/TMDT/Views/Categories/Edit.cshtml
@@ -2,10 +2,7 @@
 
 @{
     ViewBag.Title = "Edit";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
-
-<h2>Edit</h2>
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 
 
 @using (Html.BeginForm())
@@ -13,8 +10,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Category</h4>
-        <hr />
+      
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.CateID)
 
@@ -28,7 +24,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-warning" />
             </div>
         </div>
     </div>
