--- a/TMDT/Views/Categories/Index.cshtml
+++ b/TMDT/Views/Categories/Index.cshtml
@@ -2,20 +2,18 @@
 
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+
 }
-
-<h2>Index</h2>
-
-<p>
+<button class="btn btn-success btn-sm">
     @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
+</button>
+<table class="table table-striped">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.CateName)
         </th>
-        <th></th>
+        <th>công cụ</th>
     </tr>
 
 @foreach (var item in Model) {
