--- a/TMDT/Views/ManageRole/Index.cshtml
+++ b/TMDT/Views/ManageRole/Index.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Users With Roles";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 
 }
 
