--- a/TMDT/Views/Providers/Delete.cshtml
+++ b/TMDT/Views/Providers/Delete.cshtml
@@ -2,14 +2,13 @@
 
 @{
     ViewBag.Title = "Delete";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Bạn có chắc là xoá nhà cung cấp này?</h3>
 <div>
-    <h4>Provider</h4>
+   
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -50,7 +49,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" value="Delete" class="btn btn-danger" /> |
             @Html.ActionLink("Back to List", "Index")
         </div>
     }
