--- a/TMDT/Views/Publishers/Details.cshtml
+++ b/TMDT/Views/Publishers/Details.cshtml
@@ -2,14 +2,13 @@
 
 @{
     ViewBag.Title = "Details";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h2>Details</h2>
+
 
 <div>
-    <h4>Publisher</h4>
-    <hr />
+   
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.PublisherName)
