--- a/TMDT/Views/Role/Delete.cshtml
+++ b/TMDT/Views/Role/Delete.cshtml
@@ -2,7 +2,8 @@
 
 @{ ViewBag.Title = "Delete role";
 
-                Layout = "~/Views/Shared/_Layout.cshtml"; }
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml"; 
+    }
 
 <div class="row">
     <div class="col-md-12 ">
