--- a/TMDT/Views/Role/Index.cshtml
+++ b/TMDT/Views/Role/Index.cshtml
@@ -1,13 +1,14 @@
 ﻿@using Microsoft.AspNet.Identity.EntityFramework;
 @model IEnumerable<IdentityRole>
 @{ ViewBag.Title = "Index";
-                Layout = "~/Views/Shared/_Layout.cshtml"; }
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+    }
 
 <div class="row">
     <div class="col-lg-6">
-        <h2>@ViewBag.Title</h2>
-        @ViewBag.ListRoles
-        <hr />
+    
+     
+ 
         @Html.ActionLink("Create Role", "Create", null, new { @class = "btn btn-primary" })
         <hr />
         <table class="table table-bordered">
