--- a/TMDT/Views/Shared/_LayoutAdmin.cshtml
+++ b/TMDT/Views/Shared/_LayoutAdmin.cshtml
@@ -38,6 +38,8 @@
                     <li class="navmenu-item"><a href="/Publishers" class="navmenu-link">Publishers</a></li>
                     <li class="navmenu-item"><a href="/ManageRole" class="navmenu-link">Manage Role</a></li>
                     <li class="navmenu-item"><a href="/Order" class="navmenu-link">Order</a></li>
+                    <li class="navmenu-item"><a href="/OrderDetail" class="navmenu-link">OrderDetail</a></li>
+
                 </ul>
                 <div class="navinfo">
                     <div class="social">
