--- a/TMDT/Views/Shared/_LoginPartial.cshtml
+++ b/TMDT/Views/Shared/_LoginPartial.cshtml
@@ -11,7 +11,7 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li class="partial_login_wrapper">
                             <div class="dropdown">        
-                                <img class="dropBtn" style="border-radius:50%" src=@Html.Action("Index", "ShowImgCurrentUser") />
+                                <img alt="ava" class="dropBtn" style="border-radius:50%" src=@Html.Action("Index", "ShowImgCurrentUser") />
                                
                                 <div class="dropdown-content">
                                     <div>
