--- a/TMDT/Views/Role/Create.cshtml
+++ b/TMDT/Views/Role/Create.cshtml
@@ -1,8 +1,7 @@
 ﻿@model Microsoft.AspNet.Identity.EntityFramework.IdentityRole
 
 @{ ViewBag.Title = "Create role";
-    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
-    }
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml"; }
 
 <div class="row">
     <div class="col-sm-6">
