--- a/TMDT/Views/Orders/Details.cshtml
+++ b/TMDT/Views/Orders/Details.cshtml
@@ -1,51 +1,51 @@
-﻿@model TMDT.Models.Order
+﻿@model IEnumerable<TMDT.Models.OrderDetail>
 
 @{
     ViewBag.Title = "Details";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h2>Details</h2>
+<label class="control-label">Họ tên: @ViewBag.name</label>
+<br />
+<label class="control-label">Email: @ViewBag.email</label>
+<br />
+<label class="control-label">Địa chỉ: @ViewBag.address</label>
+<br />
+<label class="control-label">Số điện thoại: @ViewBag.phone</label>
 
+<table class="table">
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.Book.BookName)
+        </th>
+
+        <th>
+            @Html.DisplayNameFor(model => model.Quantity)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.UnitPriceSale)
+        </th>
+        <th></th>
+    </tr>
+
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Book.BookName)
+            </td>
+
+            <td>
+                @Html.DisplayFor(modelItem => item.Quantity)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.UnitPriceSale)
+            </td>
+
+        </tr>
+    }
+
+</table>
 <div>
-    <h4>Order</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.UserId)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.UserId)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.AddressOrder)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.AddressOrder)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.PhoneOrder)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PhoneOrder)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.OrderDate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.OrderDate)
-        </dd>
-
-    </dl>
-</div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.OrderID }) |
     @Html.ActionLink("Back to List", "Index")
-</p>
+</div>
