--- a/TMDT/Views/Shared/_LoginPartial.cshtml
+++ b/TMDT/Views/Shared/_LoginPartial.cshtml
@@ -14,12 +14,18 @@
                                 <img alt="ava" class="dropBtn" style="border-radius:50%" src=@Html.Action("Index", "ShowImgCurrentUser") />
                                
                                 <div class="dropdown-content">
-                                    <div>
-                                        @Html.ActionLink(User.Identity.GetUserName(), "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
+                                    <div class="list-group-item-text">
+                                        @Html.ActionLink("Quản lý tài khoản", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Quản lý tài khoản" })
                                     </div>
-                                    <div>
+                                    <hr />
+                                    <div class="list-group-item-text">
+                                        <a target="_parent" href="/Orders/ListOrderOfUser">Quản lý đơn hàng</a>
+                                    </div>
+                                    <hr />
+                                    <div class="list-group-item-text">
                                         <a href="javascript:document.getElementById('logoutForm').submit()">Log off &nbsp;<span class="glyphicon glyphicon-log-out"></span></a>
                                     </div>
+
                                 </div>
                             </div>
 
