ajax filter table order

--- a/TMDT/Content/Site.css
+++ b/TMDT/Content/Site.css
@@ -166,7 +166,7 @@
       text-decoration: none;
       left: 45px; }
     .header_top .logo_wrapper .logo_top:after {
-      content: 'AC';
+      content: 'AQK';
       position: absolute;
       left: 4px;
       top: 2px;
