--- a/TMDT/Content/Site.scss
+++ b/TMDT/Content/Site.scss
@@ -269,7 +269,7 @@
         }
 
         .logo_top:after {
-            content: 'AC';
+            content: 'AQK';
             position: absolute;
             left: 4px;
             top: 2px;
