--- a/TMDT/Views/Orders/DetailOfUser.cshtml
+++ b/TMDT/Views/Orders/DetailOfUser.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "DetailOfUser";
-    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 
