--- a/TMDT/Views/Shared/_Layout.cshtml
+++ b/TMDT/Views/Shared/_Layout.cshtml
@@ -4,6 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
+    <link rel="icon" href="~/Content/Images/logo.png" type="image/gif" sizes="16x16">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     @Styles.Render("~/Content/Site")
     @Scripts.Render("~/bundles/modernizr")
 
@@ -19,7 +22,7 @@
                 </button>
                 <div class="logo_wrapper ">
                     <a href="@Url.Action("Index", "Books")">
-                        <h1 class="logo_top">AC</h1>
+                        <h1 class="logo_top">AQK</h1>
                     </a>
                 </div>
             </div>
@@ -105,6 +108,7 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     <script src="~/Scripts/ChangeImg.js"></script>
+    <script src="~/Scripts/ajaxFilter.js"></script>
     @RenderSection("scripts", required: false)
 
 </body>
