--- a/TMDT/Views/Orders/Index.cshtml
+++ b/TMDT/Views/Orders/Index.cshtml
@@ -7,7 +7,7 @@
 
 
 
-
+    <input class="form-control" id="myInput" type="text" placeholder="Search..">
 <table class="table">
     <tr>
         <th>
@@ -30,32 +30,34 @@
         </th>
     </tr>
 
-@foreach (var item in Model) {
-<tr>
-    <td>
-        @Html.DisplayFor(modelItem => item.NameRec)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.AddressOrder)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.PhoneOrder)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.OrderDate)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Payment)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Status)
-    </td>
-    <td>
-        @Html.ActionLink("Edit", "Edit", new { id = item.OrderID }) |
-        @Html.ActionLink("Details", "Details", new { id = item.OrderID }) |
-        @Html.ActionLink("Delete", "Delete", new { id = item.OrderID })
-    </td>
-</tr>
-}
+    <tbody id="myTable">
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.NameRec)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.AddressOrder)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PhoneOrder)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.OrderDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Payment)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Status)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.OrderID }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.OrderID }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.OrderID })
+                </td>
+            </tr>
+        }</tbody>
 
 </table>
