--- a/TMDT/Content/Site.scss
+++ b/TMDT/Content/Site.scss
@@ -1218,3 +1218,10 @@ form.search_bar::after {
 }
 /*#endregion login*/
 
+/*#region btn momo*/
+.checkout-radio-group {
+    border: 1px solid black;
+    border-radius: 5px;
+}
+
+/*#endregion momo*/
